name:                sdl2-image
version:             0.1.0.0
synopsis:            Bindings (both high and low) to SDL_image.
-- description:
license:             MIT
license-file:        LICENSE
author:              Siniša Biđin
maintainer:          sinisa@bidin.cc
-- copyright:
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/sbidin/sdl2-image.git

library
  ghc-options: -Wall

  exposed-modules:
    SDL.Image,
    SDL.Image.Raw

  other-modules:
    SDL.Image.Internal.Bitmask
    SDL.Image.Internal.Numbered

  hs-source-dirs:
    src

  pkgconfig-depends:
    sdl2 >= 2.0.3,
    SDL2_image >= 2.0.0

  build-depends:
    base >= 4.7 && < 5,
    sdl2 >= 2.0,
    bytestring >= 0.10.4.0,
    text >= 1.1.0.0,
    transformers >= 0.2

  default-language:
    Haskell2010

flag example
  description: Build the example executable
  default: True

executable example
  if flag(example)
    build-depends:
      base >= 4.7 && < 5,
      sdl2,
      sdl2-image
  else
    buildable: False

  hs-source-dirs: example
  main-is: Example.hs
  default-language: Haskell2010
  ghc-options: -Wall
